@@ -1,25 +1,17 @@
 <Root>
   <commands>
-    <cmd name="ZoomIn"              _label="Zoom in"                   pixtype="stock" pixname="gtk-zoom-in"/>
-    <cmd name="ZoomOut"             _label="Zoom out"                  pixtype="stock" pixname="gtk-zoom-out"/>
-    <cmd name="ZoomToFit"           _label="Zoom to fit"               pixtype="stock" pixname="gtk-zoom-fit"/>
+    <cmd name="SelectAll"           _label="Select _All"  _tip="Select all tasks"/>
+    <cmd name="ZoomIn"              _label="Zoom in"               pixtype="stock" pixname="gtk-zoom-in"/>
+    <cmd name="ZoomOut"             _label="Zoom out"              pixtype="stock" pixname="gtk-zoom-out"/>
+    <cmd name="ZoomToFit"           _label="Zoom to fit"           pixtype="stock" pixname="gtk-zoom-fit"/>
   </commands>
 
   <menu>
     <submenu    name="Edit">
       <placeholder name="Selection placeholder">
-        <menuitem name="SelectAll"         verb=""   accel="*Control*a"/>
+        <!--menuitem name="SelectAll"         verb=""   accel="*Control*a"/-->
       </placeholder>
       <placeholder name="View specific placeholder">
-        <menuitem name="InsertTask"         verb=""/>
-        <menuitem name="InsertTasks"        verb=""/>
-        <separator/>
-        <menuitem name="UnindentTask"        verb=""/>
-        <separator/>
-        <menuitem name="ResetConstraint"     verb=""/>
-        <menuitem name="ResetAllConstraints" verb=""/>
-        <separator/>
-        <menuitem name="EditTask"            verb=""   accel="*Shift**Control*e"/>
       </placeholder>
     </submenu>
 
@@ -30,17 +22,19 @@
         <menuitem name="ZoomToFit"         verb=""/>
       </placeholder>
     </submenu>
+
+    <submenu    name="Actions">
+      <placeholder name="View specific actions placeholder">
+      </placeholder>
+    </submenu>
+
   </menu>
 
   <dockitem name="Toolbar">
     <toolitem name="ZoomToFit"    verb="" _tip="Zoom to fit the entire project"/>
     <toolitem name="ZoomIn"       verb="" _tip="Zoom in"/>
     <toolitem name="ZoomOut"      verb="" _tip="Zoom out"/>
-    <!--separator/-->
-    <!--toolitem name="Test" verb=""/-->
   </dockitem>
-
-
 
 </Root>
 
