@@ -1,5 +1,10 @@
 2004-05-10  Richard Hult  <richard@imendio.com>
 
+	* data/ui/time-table-view.ui: Fix the weird edit menu.
+	* src/planner-ttable-model.c: Start cleaning up coding style.
+
+2004-05-10  Richard Hult  <richard@imendio.com>
+
 	* data/ui/Makefile.am: Dist all ui files unconditionally.
 
 	* data/glade/project-properties.glade:
